test/gpu/native/errors/gpuTraceStd.devel.poi.good
std/MyMod.chpl:20: In function 'badLoop':
std/MyMod.chpl:22: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
gpuTraceStd.chpl:6: note: function is marked as not eligible for GPU execution
std/MyMod.chpl:13: note:   reached via call to 'convertToString' here
std/MyMod.chpl:17: note:   reached via call to 'doSomethingElsePOI' here
std/MyMod.chpl:24: note:   reached via call to 'doSomethingPOI' in loop body here
  gpuTraceStd.chpl:11: called as badLoop(type t = myRecord)
